--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width">
 	<title>Uni Map</title>
-	<link rel="stylesheet" href="senshu_map.css" />
+	<link rel="stylesheet" href="senshu_map.css" id="mainStyleSheet">
 	<link rel="manifest" href="/asakaproject2023/manifest.json">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -103,6 +103,7 @@
 		</div>
 	</div>
 	<div id="mapAreaWrapper">
+		<!--<div id="loading"></div>-->
 		<div id="mapNav"></div>
 		<div id="mapArea">
 			<canvas id="canvas"></canvas>
