--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
 		</div>
 	</div>
 	<div id="mapAreaWrapper">
-		<!--<div id="loading"></div>-->
+		<div id="loading">
+			<div class="content">
+				<img src="data/logo/logo.png">
+				<div id="loadingText">Now Loading</div>
+			</div>
+		</div>
 		<div id="mapNav"></div>
 		<div id="mapArea">
 			<canvas id="canvas"></canvas>
